@@ -64,7 +64,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .createdAt(Timestamp.valueOf(LocalDateTime.now()))
                 .categoryResponseDto(new CategoryResponseDto(1L,"Category"))
                 .build();
@@ -103,7 +103,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .category("Category")
                 .build();
 
@@ -111,7 +111,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .category("WrongCategory")
                 .build();
     }
@@ -224,6 +224,7 @@ class ProductServiceTest {
         verify(mappersMock, times(1)).convertToProductResponseDto(any(Product.class));
     }
 
+
     @Test
     void getTop10Products() {
         class MockProductCount implements ProductCountInterface {
@@ -272,11 +273,11 @@ class ProductServiceTest {
 
         verify(productRepositoryMock, times(1)).findTop10Products(sort);
         assertEquals(1, actualProductCountDto.size());
-        assertNotNull(actualProductCountDto.get(0));
-        assertEquals(productCountDto.getProductId(), actualProductCountDto.get(0).getProductId());
-        assertEquals(productCountDto.getName(), actualProductCountDto.get(0).getName());
-        assertEquals(productCountDto.getCount(), actualProductCountDto.get(0).getCount());
-        assertEquals(productCountDto.getSum(), actualProductCountDto.get(0).getSum());
+        assertNotNull(actualProductCountDto.getFirst());
+        assertEquals(productCountDto.getProductId(), actualProductCountDto.getFirst().getProductId());
+        assertEquals(productCountDto.getName(), actualProductCountDto.getFirst().getName());
+        assertEquals(productCountDto.getCount(), actualProductCountDto.getFirst().getCount());
+        assertEquals(productCountDto.getSum(), actualProductCountDto.getFirst().getSum());
     }
 
     @Test
@@ -289,9 +290,9 @@ class ProductServiceTest {
         Sort sortObject = orderBy("name", true);
         when(productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject)).thenReturn(List.of(product));
         List<Product> actualProductResponseDto = productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertTrue(actualProductResponseDto.size() > 0);
+        assertFalse(actualProductResponseDto.isEmpty());
         verify(productRepositoryMock, times(1)).findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertEquals(product.getProductId(),actualProductResponseDto.get(0).getProductId());
+        assertEquals(product.getProductId(),actualProductResponseDto.getFirst().getProductId());
     }
 
     @Test
@@ -338,11 +339,11 @@ class ProductServiceTest {
         List <ProductPendingDto> actualProductPendingDto = productServiceMock.findProductPending(day);
         verify(productRepositoryMock, times(1)).findProductPending(day);
         assertEquals(1, actualProductPendingDto.size());
-        assertNotNull(actualProductPendingDto.get(0));
-        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.get(0).getProductId());
-        assertEquals(productPendingDto.getName(), actualProductPendingDto.get(0).getName());
-        assertEquals(productPendingDto.getCount(), actualProductPendingDto.get(0).getCount());
-        assertEquals(productPendingDto.getCreatedAt(), actualProductPendingDto.get(0).getCreatedAt());
+        assertNotNull(actualProductPendingDto.getFirst());
+        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.getFirst().getProductId());
+        assertEquals(productPendingDto.getName(), actualProductPendingDto.getFirst().getName());
+        assertEquals(productPendingDto.getCount(), actualProductPendingDto.getFirst().getCount());
+        assertEquals(productPendingDto.getCreatedAt(), actualProductPendingDto.getFirst().getCreatedAt());
     }
 
     @Test
@@ -369,15 +370,15 @@ class ProductServiceTest {
         Integer interval = 5;
         ProductProfitInterface productProfitInterface = new MockProductProfit("WEEK",BigDecimal.valueOf(22.0));
         List<ProductProfitInterface> productProfitInterfaceList = List.of(productProfitInterface);
-        when(productRepositoryMock.findProffitByPeriod(anyString(),anyInt())).thenReturn(productProfitInterfaceList);
+        when(productRepositoryMock.findProfitByPeriod(anyString(),anyInt())).thenReturn(productProfitInterfaceList);
         when(mappersMock.convertToProductProfitDto(any(ProductProfitInterface.class))).thenReturn(productProfitDto);
 
         List <ProductProfitDto> actualProductProfitDto = productServiceMock.findProductProfit(period,interval);
-        verify(productRepositoryMock, times(1)).findProffitByPeriod(period,interval);
+        verify(productRepositoryMock, times(1)).findProfitByPeriod(period,interval);
         assertEquals(1, actualProductProfitDto.size());
-        assertNotNull(actualProductProfitDto.get(0));
-        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.get(0).getPeriod());
-        assertEquals(productProfitDto.getSum(), actualProductProfitDto.get(0).getSum());
+        assertNotNull(actualProductProfitDto.getFirst());
+        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.getFirst().getPeriod());
+        assertEquals(productProfitDto.getSum(), actualProductProfitDto.getFirst().getSum());
 
     }
     private Sort orderBy(String sort, Boolean ascending) {
